app/k8s/prd/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: example-app
  namespace: prd
  labels:
    app: example-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-app
        image: srhopkins/example-app
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 5000
      restartPolicy: Always
